@@ -17,7 +17,7 @@ MAN3=	zip_add.3 \
 	zip_name_locate.3 \
 	zip_open.3 \
 	zip_rename.3 \
-	zip_source_data.3 \
+	zip_source_buffer.3 \
 	zip_source_file.3 \
 	zip_source_filep.3 \
 	zip_source_free.3 \
