@@ -1,4 +1,4 @@
-.\" $NiH: zip_source_free.mdoc,v 1.2 2004/11/17 21:55:14 wiz Exp $
+.\" $NiH: zip_source_free.mdoc,v 1.1 2004/11/18 16:49:20 wiz Exp $
 .\"
 .\" zip_source_free.mdoc -- free zip data source
 .\" Copyright (C) 2004 Dieter Baron and Thomas Klausner
@@ -54,7 +54,7 @@ is
 .Dv NULL ,
 it does nothing.
 .Sh SEE ALSO
-.Xr zip_source_data 3 ,
+.Xr zip_source_buffer 3 ,
 .Xr zip_source_file 3 ,
 .Xr zip_source_filep 3 ,
 .Xr zip_source_function 3 ,
