@@ -1,4 +1,4 @@
-.\" $NiH: zip_source.mdoc,v 1.2 2004/11/17 21:55:14 wiz Exp $
+.\" $NiH: zip_source_zip.mdoc,v 1.1 2004/11/18 16:48:08 wiz Exp $
 .\"
 .\" zip_source_zip.mdoc -- create data source from zip file
 .\" Copyright (C) 2004 Dieter Baron and Thomas Klausner
@@ -106,7 +106,7 @@ and
 .Sh SEE ALSO
 .Xr zip_add 3 ,
 .Xr zip_replace 3 ,
-.Xr zip_source_data 3 ,
+.Xr zip_source_buffer 3 ,
 .Xr zip_source_file 3 ,
 .Xr zip_source_filep 3 ,
 .Xr zip_source_free 3 ,
